gcc/testsuite/rust/rustc/ui/keyword/keyword-true-as-identifier.rs
fn main() {
    let true = 22; // { dg-error ".E0308." "" { target *-*-* } }
}

